set @media standards for screen sizes, fixed text wrapping problem

--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -138,3 +138,28 @@ main {
   color: #4056A1;
   padding-right: 0.5em;
 }
+
+@media only screen and (min-width : 1024px) {
+  body {
+  display: flex;
+  justify-content: space-between;
+}
+  main {
+    margin-top: 120px;
+  }
+  #main-header {
+    width: 30%;
+    margin-top: 160px;
+    margin-left: 5%;
+    border: 2px solid black
+  }
+  div > img {
+    padding-top: 10%
+  }
+  #main-nav {
+    background-color: #4056A1;
+  }
+  .container {
+    max-width: 50%;
+  }
+}
